[package]
name = "cog_new_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive", "suggestions", "color"] }
tokio = { version = "1", features = ["full"] }

aws-config = "0.3.0"
aws-sdk-cognitoidentityprovider = "0.3.0"
aws-sdk-config = "0.3.0"
