[package]
name = "cog-new-user"
version = "0.2.0"
edition = "2021"
description = "simple app to create cognito user"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive", "suggestions", "color"] }
clap_complete = "3.0.0"
tokio = { version = "1", features = ["full"] }

aws-config = "0.3.0"
aws-sdk-cognitoidentityprovider = "0.3.0"
aws-sdk-config = "0.3.0"
